# refinement

./: CMakeLists.txt  README.md
src/: bamutil.cpp  bamutil.h  common.h  main.cpp  options.cpp  options.h  recsc.cpp  recsc.h  sam_ext.h  util.h
